--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
         "bootstrap": "4.0.0",
         "chart.js": "2.7.1",
         "compression": "^1.7.1",
-        "connect-mongo": "0.8.2",
+        "connect-mongo": "^0.8.2",
+        "cookie-parser": "^1.4.0",
         "d3-request": "^1.0.5",
         "datatables.net-bs4": "1.10.16",
         "deck.gl": "^5.0.3",
